# rust-coin-price-aggregator

./: Cargo.toml
src/: lib.rs  main.rs  startup.rs
src/api/: mod.rs
src/api/controller/: controller.rs
src/dbs/: mod.rs  mongodb.rs  redis.rs
src/models/: actix.rs  coin_pairs.rs  mod.rs  trade_history.rs
src/ws/: binance_ws.rs  mod.rs
