[package]
name = "rust-price-aggeregator"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }



tokio = { version = "1.27.0", features = ["full"] }
dotenvy = "0.15.7"
futures = "0.3.28"
futures-util = "0.3.28"

futures-channel = "0.3.28"
url = "2.3.1"

serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
mongodb = "2.5.0"
bson = "2.6.1"

lazy_static = "1.4.0"
